# metallama

./: README.md  audio.md  hash_password.py  pyproject.toml  record.md  start.sh
metallama/app/: auth.py  config.py  hf.py  hf_routes.py  main.py  models.py  ocr_utils.py  profiles.py  runtime.py  unified_config.py
metallama/app/ollama/: config.py
metallama/app/static/: app.js  index.html  styles.css
metallama/app/static/js/: main.js
metallama/app/static/js/core/: api.js  auth.js  clipboard.js  download.js  uiMessage.js
metallama/app/static/js/features/audio/: index.js
metallama/app/static/js/features/hf/: index.js
metallama/app/static/js/features/models/: index.js
metallama/app/static/js/features/ocr/: index.js
metallama/app/static/js/features/system/: index.js
metallama/app/static/js/features/theme/: index.js
