[project]
name = "metallama"
version = "0.1.0"
description = "Simple llama.cpp process manager with FastAPI + vanilla web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "psutil>=5.9.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metallama/app"]

[tool.hatch.build.targets.sdist]
include = [
  "metallama/app",
  "README.md",
]

[tool.ruff]
line-length = 100
